--- a/Views/Access/Regist.cshtml
+++ b/Views/Access/Regist.cshtml
@@ -34,11 +34,11 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Jelszó</label>
-                        <input type="password" asp-for="jelszo" class="form-control">
+                        <input type="password" asp-for="jelszo" class="form-control" name="password">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Jelszó megismétlése</label>
-                        <input type="password" asp-for="jelszo" class="form-control">
+                        <input type="password" asp-for="jelszo" class="form-control" name="password_check">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Születés dátuma</label>
