--- a/Views/Access/Login.cshtml
+++ b/Views/Access/Login.cshtml
@@ -19,6 +19,10 @@
 </head>
 
 <body>
+    <div>
+        <a asp-action="Connected">Connected?</a>
+    </div>
+
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4 login-container">
