--- a/Views/Access/Regist.cshtml
+++ b/Views/Access/Regist.cshtml
@@ -22,7 +22,14 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-4 login-container">
-               
+                <div>
+                    @if (ViewData["ValidateMessage"] != null)
+                    {
+                        <div class="alert alert-danger" role="alert">
+                            @ViewData["ValidateMessage"]
+                        </div>
+                    }
+                </div>
                 <form asp-controller="Access" asp-action="Regist" method="post">
                     <div class="mb-3">
                         <label class="form-label">Felhasználónév</label>
@@ -45,11 +52,7 @@
                         <input type="date" asp-for="szuletes_datuma" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Regisztráció</button>
-                    @if (ViewData["ValidateMessage"] != null)
-                    {
-                        <br />
-                        <label>@ViewData["ValidateMessage"]</label>
-                    }
+                   
                 </form>
 
                 <div>
