--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="KepKategoria" asp-action="Index">KepKategoria</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Lekerdezes" asp-action="Index">Lekerdezesek</a>
+                        </li>
                         <li class="nav-item ms-auto">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Kijelentkezés</a>
                         </li>
