--- a/Views/Access/Regist.cshtml
+++ b/Views/Access/Regist.cshtml
@@ -43,12 +43,12 @@
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Jelszó</label>
-                        <input type="password" asp-for="jelszo" class="form-control" name="password">
+                        <input type="password" asp-for="jelszo" class="form-control" name="password" autocomplete="off">
                         <span asp-validation-for="jelszo" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Jelszó megismétlése</label>
-                        <input type="password" asp-for="jelszo" class="form-control" name="password_check"> 
+                        <input type="password" asp-for="jelszo" class="form-control" name="password_check" autocomplete="off"> 
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Születés dátuma</label>
