--- a/Views/Album/Create.cshtml
+++ b/Views/Album/Create.cshtml
@@ -18,8 +18,12 @@
                 <span asp-validation-for="cim" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="felhasz_id" class="control-label"></label>
-                <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id"></select>
+                @if(@ViewBag.felhasz_role==1){
+                    <label asp-for="felhasz_id" class="control-label"></label>
+                    <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id"></select>
+                }else{
+                    <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id" hidden></select>
+                }
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
