--- a/Views/Album/Index.cshtml
+++ b/Views/Album/Index.cshtml
@@ -28,12 +28,14 @@
                 @Html.DisplayFor(modelItem => item.cim)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ReferencedFelhasznalo.id)
+                @Html.DisplayFor(modelItem => item.ReferencedFelhasznalo.nev)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.id">Details</a> 
+                @if((@ViewBag.role==1) || (item.ReferencedFelhasznalo.id == @ViewBag.felhaszID)){
+                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                }
             </td>
         </tr>
 }
