--- a/Views/Felhasznalo/Delete.cshtml
+++ b/Views/Felhasznalo/Delete.cshtml
@@ -45,7 +45,14 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" />
     </form>
+
+    <div>
+    <a asp-action="Details" asp-route-id="@Model?.id">Details</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> 
+    @if(@ViewBag.felhasz_role==1){
+        <a asp-action="Index">Back to List</a>
+    }
+</div>
 </div>
