--- a/Views/Felhasznalo/Details.cshtml
+++ b/Views/Felhasznalo/Details.cshtml
@@ -44,5 +44,8 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Delete" asp-route-id="@Model?.id">Delete</a>
+    @if(@ViewBag.felhasz_role==1){
+        <a asp-action="Index">Back to List</a>
+    }
 </div>
