--- a/Views/Felhasznalo/Edit.cshtml
+++ b/Views/Felhasznalo/Edit.cshtml
@@ -46,7 +46,11 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Details" asp-route-id="@Model?.id">Details</a> |
+    <a asp-action="Delete" asp-route-id="@Model?.id">Delete</a> 
+    @if(@ViewBag.felhasz_role==1){
+        <a asp-action="Index">Back to List</a>
+    }
 </div>
 
 @section Scripts {
