--- a/Views/Kep/Create.cshtml
+++ b/Views/Kep/Create.cshtml
@@ -31,8 +31,12 @@
                 <select asp-for="album_id" class ="form-control" asp-items="ViewBag.album_id"></select>
             </div>
             <div class="form-group">
-                <label asp-for="felhasz_id" class="control-label"></label>
-                <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id"></select>
+                @if(@ViewBag.felhasz_role==1){
+                    <label asp-for="felhasz_id" class="control-label"></label>
+                    <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id"></select>
+                }else{
+                    <select asp-for="felhasz_id" class ="form-control" asp-items="ViewBag.felhasz_id" hidden></select>
+                }
             </div>
             <div class="form-group" hidden>
                 <label class="control-label">fenykep</label>
