--- a/Views/Kep/Delete.cshtml
+++ b/Views/Kep/Delete.cshtml
@@ -52,7 +52,14 @@
 
     <form asp-action="Delete">
         <input type="hidden" asp-for="id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-danger" /> 
     </form>
+
+    <div>
+    @if((@ViewBag.felhasz_role==1) || (Model.ReferencedFelhasznalo.id==@ViewBag.felhasz_id)){
+        <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> 
+        <a asp-action="Details" asp-route-id="@Model.id">Details</a>
+    }
+    <a asp-action="Index">Back to List</a>
+    </div>
 </div>
