--- a/Views/Kep/Details.cshtml
+++ b/Views/Kep/Details.cshtml
@@ -50,6 +50,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> |
+    @if((@ViewBag.felhasz_role==1) || (Model.ReferencedFelhasznalo.id==@ViewBag.felhasz_id)){
+        <a asp-action="Edit" asp-route-id="@Model?.id">Edit</a> 
+        <a asp-action="Delete" asp-route-id="@Model.id">Delete</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
