--- a/Views/Kep/Index.cshtml
+++ b/Views/Kep/Index.cshtml
@@ -58,9 +58,11 @@
                     @Html.DisplayFor(modelItem => item.ReferencedAlbum.cim)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                    <a asp-action="Details" asp-route-id="@item.id">Details</a>
+                    @if((@ViewBag.felhasz_role==1) || (item.ReferencedFelhasznalo.id==@ViewBag.felhasz_id)){
+                        <a asp-action="Edit" asp-route-id="@item.id">Edit</a>
+                        <a asp-action="Delete" asp-route-id="@item.id">Delete</a>
+                    }
                 </td>
             </tr>
         }
