--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PhotoApp.Models.Felhasznalo
+﻿@model IEnumerable<PhotoApp.Models.Kep>
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -6,5 +6,20 @@
 <div class="text-center">
 
     <h1 class="display-4">Welcome,@ViewBag.nev!</h1>
+    <h2>Legjobbra értékelt kép</h2>
+    <img src="~/images/@ViewBag.utvonal" height="200" width="200"
+         asp-append-version="true">
+</div>
 
-   </div>
+<div class="container">
+    <h2>Mások képei</h2>
+    <div class="row">
+        @foreach (var image in Model)
+        {
+            <div class="col-md-3 mb-5">
+                <img src="~/images/@image.fenykeputvonal" height="200" width="200"
+                     asp-append-version="true">
+            </div>
+        }
+    </div>
+</div>
