--- a/Views/Palyazat/Create.cshtml
+++ b/Views/Palyazat/Create.cshtml
@@ -27,7 +27,7 @@
                 <input asp-for="leiras" class="form-control" />
                 <span asp-validation-for="leiras" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group" hidden>
                 <label asp-for="nyertes" class="control-label"></label>
                 <input asp-for="nyertes" class="form-control" />
                 <span asp-validation-for="nyertes" class="text-danger"></span>
