--- a/Views/Lekerdezes/Index.cshtml
+++ b/Views/Lekerdezes/Index.cshtml
@@ -138,22 +138,58 @@
     </tbody>
 </table>
 
-<h2>Pályázatok határidő alapján csoportosítva</h2>
+<h2>Országok átlagos értékelése</h2>
 <table class="table">
     <thead>
         <tr>
-            <th>Év</th>
-            <th>Hónap</th>
-            <th>Pályázatok Száma</th>
+            <th>Ország</th>
+            <th>Átlagos értékelés</th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var eredmeny in Model.PalyazatokHataridoSzerint)
+        @foreach (var item in Model.CountryRatingViewModel)
         {
             <tr>
-                <td>@eredmeny.Ev</td>
-                <td>@eredmeny.Honap</td>
-                <td>@eredmeny.PalyazatokSzama</td>
+                <td>@item.CountryName</td>
+                <td>@item.AverageRating</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h2>Albumonkénti átlagos értékelés</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Album címe</th>
+            <th>Átlagos értékelés</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.AlbumRatingViewModel)
+        {
+            <tr>
+                <td>@item.AlbumTitle</td>
+                <td>@item.AverageRating</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
+<h2>Kategóriánként legjobb értékelés</h2>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Kategória</th>
+            <th>Legjobb értékelés</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.MaxCategoryRatingViewModel)
+        {
+            <tr>
+                <td>@item.CategoryName</td>
+                <td>@item.MaxRating</td>
             </tr>
         }
     </tbody>
